# pysatKamodo

./: .gitignore  404.html  LICENSE  README.md  WorkLog.md  docker-compose.yaml  index.html  kamodo.yaml  mkdocs.yml  pysat.Dockerfile  pysatKamodo.Dockerfile  setup.cfg  sitemap.xml
Untitled/: index.html
dockerfiles/: pysatKamodo.Dockerfile  pysatMadrigal.Dockerfile  pysatNASA.Dockerfile
docs/: Madrigal.md  NASA.md  pysatKamodo.ipynb  pysatKamodo.md
examples/: madrigal.yaml  nasa.yaml
pysat/kamodo/: __init__.py
pysatKamodo/: index.html
pysat_kamodo/: __init__.py  madrigal.py  nasa.py  pysat_kamodo.py
