[metadata]
name = pysat-kamodo
version = 0.0.1
author = Asher Pembroke
author_email = apembroke@gmail.com
description = Kamodo api for pysat
url = https://pysat.github.io/pysatKamodo
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: OSI Approved
license = NASA OPEN SOURCE AGREEMENT VERSION 1.3

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  pysat
  kamodo

[options.packages.find]
where=pysat*